src/test/resources/errors/PropertiesError.mch
MACHINE PropertiesError
PROPERTIES 1 = 2
END